Day 2. Also started adding utils for file reading and refactored Day 1 to use it too.

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@
 # Go workspace file
 go.work
 
+# VSCode files
+.vscode/
+
 # Advent of Code puzzle inputs which we don't want to check in.
 inputs/
